<resources>
    <!-- App-wide Strings-->
    <string name="app_name">GeoRef</string>
    <string name="error_internet">Error connecting to server</string>
    <string name="error_retry">Retry</string>

    <!-- Main Menu Fragment Strings -->
    <string name="main_menu_title">Main Menu</string>
    <string name="main_menu_map">View Map</string>
    <string name="main_menu_get_service">Request a Service</string>
    <string name="main_menu_offer_service">Offer a Service</string>
    <string name="main_menu_local_info">General Information</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About Us</string>

    <!-- About Dialog -->
    <string name="about_title">About Us</string>
    <string name="about_content">GeoRef is a geotagging service that seeks to inform immigrants and
        refugees about any useful services in their vicinity while promoting collaboration between
        individuals.\n\nCoded by Michael Chen</string>

    <!-- Service Filter Dialog -->
    <string name="filter_title">Request a service</string>
    <string name="filter_type">Service type:</string>
    <string name="filter_budget">Available budget:</string>
    <string name="filter_distance">Search within:</string>
    <string name="filter_spinner_hint">Please select a service type</string>
    <string name="filter_search">Search</string>

    <!-- My Services -->
    <string name="services_title">My Services</string>

    <!-- Add New Service -->
    <string name="add_title">Offer a New Service</string>
    <string name="add_name">Service Name:</string>
    <string name="add_desc">Description:</string>
    <string name="add_money">Fees:</string>
    <string name="add_submit">Submit</string>
    <string name="add_hint_name">Name of the service</string>
    <string name="add_hint_fees">Expected pay in $/hour</string>

</resources>
